--- a/assets/styles/scss/modals/modal.scss
+++ b/assets/styles/scss/modals/modal.scss
@@ -9,6 +9,7 @@
   padding: 10% 0;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   z-index: 1000;
   overflow-y: scroll;
 
@@ -33,7 +34,6 @@
 
   @include md {
     padding: 1rem;
-    max-width: 70%;
   }
 
   @include sm {
@@ -43,7 +43,6 @@
 
   @include xs {
     padding: 1rem;
-    max-width: 90%;
   }
 
   &__title {
