--- a/assets/styles/scss/sections/age-gate.scss
+++ b/assets/styles/scss/sections/age-gate.scss
@@ -7,8 +7,8 @@
   justify-content: center;
   padding: 30px;
   backdrop-filter: blur(23px);
+  -webkit-backdrop-filter: blur(23px);
   z-index: 2000;
-  
 
   @include xs {
     padding: 20px;
@@ -22,8 +22,8 @@
     stroke: $color-blue-dark;
 
     @include md {
-    max-width: 25px;
-    max-height: 30px;
+      max-width: 25px;
+      max-height: 30px;
     }
   }
 
@@ -80,10 +80,6 @@
 
     @include sm {
       gap: 7px;
-      align-items: flex-start
-    }
-
-    @include xs {
       align-items: flex-start;
     }
 
@@ -105,6 +101,6 @@
 
 #age {
   max-width: 13px;
-    height: 13px;
-    border-radius: 0;
+  height: 13px;
+  border-radius: 0;
 }
